@@ -996,9 +996,9 @@ its C<Content-Length> cannot be determined beforehand.
 C<json> data structures will be encoded to JSON and UTF-8.
 
 C<redirect> will set a C<Location> header if response headers have not yet been
-rendered, and will set a response status of 302 unless a different status has
-been set with L</"set_response_status">. It will set a C<Content-Length> of 0,
-and it will not set a C<Content-Type> response header.
+rendered, and will set a response status of 302 unless a different 300-level
+status has been set with L</"set_response_status">. It will set a
+C<Content-Length> of 0, and it will not set a C<Content-Type> response header.
 
 =head3 render_chunk
 
